# cookbook-lab

./: .gitignore  .gitmodules  LICENSE  README.md  example.env  example.setup.env  pyproject.toml
chapters/batteries-included/: README.md  docker-compose.yml
chapters/ch02/: ansible.cfg  ch2_pb2.yml  ch2_pb_jinja2.yml  ch2_pb_loops.yml  ch2_pb_tags.yml  ch2_pb_vault.yml  hosts  network_config_vars  notes.md  pb_debug_conditionals.yml  pb_debug_vars.yml  pb_loop_control.yml  pb_loop_index.yml  pb_loops.yml  secrets
chapters/ch03/: ACLs.yml  ansible.cfg  hosts.yml  pb_ansible_role.yml  pb_check_mode.yml  pb_collection_validate.yml  pb_get_facts.yml  pb_serial_numbers.yml  pb_serial_percentage.yml  pb_strategy_free.yml  pb_strategy_hostpin.yml  pb_test_custom_filter.yml  pb_validate_from_cache.yml  pb_yaml_anchors.yml  pb_yaml_multiline.yml  requirements.yml  secrets
chapters/ch04/: hosts.yml  pb_advanced_configs.yml  pb_basic_config.yml  pb_eos_enable_eapi.yml  pb_get_facts.yml  pb_get_vlans.yml  pb_pubkey_user.yml  pb_readonly_user.yml  pb_users.yml  pb_validate_facts.yml
chapters/ch05/: .gitignore  ansible.cfg  hosts.yml  pb_advanced_configs.yml  pb_basic_config.yml  pb_deploy_configs.yml  pb_get_bgp.yml  pb_get_ospf.yml  pb_junos_enable_netconf.yml  pb_users.yml  pb_validate_facts.yml
chapters/ch06/: ansible.cfg  decrypt_password  hosts.yml  pb_basic_config.yml  (+8 more)
commands/: main.py
containerlab/: cookbook-awx-lab.yml  cookbook-lab.yml  lab.yml
labcli/: main.py
setup/: README.md  create_droplet.yml  destroy_droplet.yml  list_droplet.yml  setup_droplet.yml
(+182 files in other folders)
