[project]
name = "cookbook-lab"
version = "0.1.0"
description = "Example Network Automation Labs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "labcli>=0.2.0"
]

[project.scripts]
lab = "commands.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["commands"]
